Fixed contrast issues and alt tags

--- a/src/components/bwcard.module.css
+++ b/src/components/bwcard.module.css
@@ -37,7 +37,7 @@
 }
 
 .bwCard a {
-  color: #78789b;
+  color: #575772;
 }
 
 .noBorder {
