--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,7 +113,7 @@ h6 {
 }
 
 .bwCard a {
-  color: #78789b;
+  color: #585872;
 }
 
 .work {
@@ -255,12 +255,12 @@ h6 {
 }
 
 .blog-post-content a {
-  color: #78789b;
+  color: #585872;
 }
 
 .image-caption {
   font-size: 14px !important;
-  color: #78789b;
+  color: #585872;
   text-align: center;
   margin: -16px auto 44px auto;
 }
